# ansifmt

./: .ocamlformat  CHANGES.md  README.md  ansifmt.opam  dune-project
.github/: FUNDING.yml
.github/workflows/: CI.yml  pages.yml
docs/: index.md
lib/: Ansifmt.ml  Color.ml  Fmt.ml  Fmt.mli  Formatting.ml  IO.ml  Int8.ml  Int8.mli  Prelude.ml  Styling.ml  Styling.mli  Util.ml  dune
lib/Ansi/: Ansi.ml  Ansi.mli  Attributes.ml  Attributes.mli  Color.ml  Color.mli
lib/Fmt/: Fmt.ml  Fmt.mli
lib/Formatting/: Element.ml  Element.mli  Interfaces.ml  Stylizer.ml  Token.ml  Token_type.ml  Util.ml
lib/Internal/: Bool.ml  List.ml  Option.ml  Pair.ml  Triplet.ml
test/: dune  test_ansifmt.ml
test/Test_ansi/: Test_ansi.ml  Test_attributes.ml  Test_color.ml  dune
test/Test_fmt/: Test_fmt.ml  dune
